--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,10 +39,15 @@ dependencies:
   dio: ^5.3.2
   firebase_core: ^2.15.1
   firebase_auth: ^4.9.0
+  intl: ^0.18.1
+  flutter_bloc: ^8.1.3
+  flutter_secure_storage: ^9.0.0
 dev_dependencies:
+
   flutter_test:
     sdk: flutter
-  
+
+
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
@@ -50,9 +55,13 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
 
+  flutter_launcher_icons: ^0.13.1
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icon/icon.png"
 # The following section is specific to Flutter packages.
 flutter:
 
