--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,9 +39,15 @@ dependencies:
   dio: ^5.3.2
   firebase_core: ^2.15.1
   firebase_auth: ^4.9.0
-  intl: ^0.18.1
+  intl: ^0.17.0
   flutter_bloc: ^8.1.3
   flutter_secure_storage: ^9.0.0
+  pie_chart: ^5.3.2
+  local_auth: ^1.1.10
+  font_awesome_flutter: ^10.5.0
+  flutter_dotenv: ^5.1.0
+  awesome_dialog: ^3.1.0
+  connectivity_plus: ^4.0.2
 dev_dependencies:
 
   flutter_test:
@@ -74,6 +80,7 @@ flutter:
   assets:
     - assets/images/  #20 [English For Life].mp4
     - assets/icons/
+    - .env
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
